Changes About us footer
Changes About us footer

--- a/html/about-us.html
+++ b/html/about-us.html
@@ -792,16 +792,17 @@
                 <div class="give-us-call">
                     <i data-feather="phone"></i>
                     <h4>Give us a call</h4>
-                    <h3>+1234567899</h3>
+                    <h3>+919920805532</h3>
                 </div>
             </div>
             <div class="row">
                 <!-- Column First -->
                 <div class="col-lg-3 col-md-6">
                     <div class="logo-footer">
-                        <img src="assets/images/logo_white.svg" alt="">
+                        <img src="assets/images/logoFooter.png" alt="">
                     </div>
-                    <p>This is Photoshop’s version of Lorem Ipsum. Proin gravida nibh vel velit auctor aliquet</p>
+                    <div class="wordAbout"><p> <span id="word1About">Help One,</span>  <br> <span id="word2About">Inspire Many</span> </p> </div> 
+                    <div class="locationAbout"><span>Rajabhau Gudade Foundation</span></div>
                     <div class="social-icons">
                         <ul class="list-unstyled list-group list-group-horizontal">
                             <li><a href="#"><i class="icofont-facebook"></i></a></li>
@@ -822,15 +823,15 @@
                         <ul class="list-unstyled">
                             <li>
                                 <div><i data-feather="map-pin"></i> </div>
-                                <div>Envato Pty Ltd, 13/2 Elizabeth St Melbourne VIC 3000, Australia</div>
+                                <div> Balewadi Pune, 411045.</div>
                             </li>
                             <li>
                                 <div><i data-feather="phone"></i> </div>
-                                <div><a href="tel:+1234567899">+1234567899</a></div>
+                                <div><a href="tel:+919920805532">+919920805532</a></div>
                             </li>
                             <li>
                                 <div><i data-feather="mail"></i> </div>
-                                <div><a href="mailto:info@hoperaise.com">info@hoperaise.com</a></div>
+                                <div><a href="info@rajabhaugudadefoundation.com">info@rajabhaugudadefoundation.com</a></div>
                             </li>
                             <li>
                                 <div><i data-feather="clock"></i> </div>
@@ -863,7 +864,7 @@
                 <!-- Column Fourth -->
                 <div class="col-lg-3 col-md-6">
                     <h3 class="footer-heading">Photo Gallery</h3>
-                    <ul id="basicuse" class="photo-thumbs"></ul>
+                    <!-- <ul id="basicuse" class="photo-thumbs"></ul> -->
                 </div>
                 <!-- Column Fourth -->
             </div>
@@ -873,7 +874,7 @@
             <div class="container pos-rel">
                 <div class="row text-md-start text-center">
                     <div class="col-sm-12 col-md-auto copyright-text">
-                        © Copyright <span class="txt-blue">Gracious</span> 2020.   |   Created by <a href="https://themeforest.net/user/mannatstudio" rel="nofollow">MannatStudio</a>
+                        © Copyright <span class="txt-blue">Gracious</span> 2020.   |   Created by <a href="https://themeforest.net/user/mannatstudio" rel="nofollow">CodeMind</a>
                     </div>
                     <div class="col-sm-12 col-md-auto ml-md-auto text-md-right text-center copyright-links">
                         <a href="#">Terms & Condition</a> | <a href="#">Privacy Policy</a> | <a href="#">Legal</a>
