--- a/html/index.html
+++ b/html/index.html
@@ -172,13 +172,13 @@
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">Events </a>
-                                <!-- <iclass="icofont-rounded-down"></i> -->
+                                <!-- <i class="icofont-rounded-down"></i> -->
                             <!-- <ul class="dropdown-menu">
                                 <li><a class="dropdown-item" href="events-list.html">Events List</a></li>
-                                <!-- <li><a class="dropdown-item" href="events-alternate.html">Events Alternate</a></li> -->
-                                <li><a class="dropdown-item" href="events-single.html">Events Single</a></li>
-                            </ul> -->
-                        </li>
+                                 <li><a class="dropdown-item" href="events-alternate.html">Events Alternate</a></li> -->
+                              
+                                <!-- <li><a class="dropdown-item" href="events-single.html">Events Single</a></li> -->
+                              
                         <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle-mob" href="index.html" data-toggle="dropdown"
                                 aria-haspopup="true" aria-expanded="false">Blog </a>
@@ -206,8 +206,7 @@
         <div class="slides-wrap">
             <div class="owl-carousel owl-theme">
                 <!--/owl-slide-->
-                <div class="owl-slide d-flex align-items-center cover"
-                    style="background-image: url("assets\images\helpOneBackground.jpg");>
+                <div class="owl-slide d-flex align-items-center cover"style="background-image: url("assets\images\helpOneBackground.jpg");>
                     <div class="container">
                         <div class="row justify-content-center justify-content-md-start no-gutters">
                             <div class="col-10 col-md-6 static">
